--- a/_data/share.yml
+++ b/_data/share.yml
@@ -16,7 +16,7 @@ platforms:
 
   - type: Linkedin
     icon: "fab fa-linkedin"
-    link: "https://www.linkedin.com/feed/?shareActive=true&shareUrl=URL"
+    link: "https://www.linkedin.com/in/jacqueline-salas-08b55a349/"
   #
   # - type: Weibo
   #   icon: "fab fa-weibo"
